--- a/engine.html
+++ b/engine.html
@@ -1,3 +1,5 @@
+$def with (name)
+
 <!DOCTYPE html> 
 <html>
   <head>
@@ -222,11 +224,14 @@
 
           for(var i=0; i<depth; i++) {
 
+            if (stack.items[stack.items.length-1].breaking)
+              break
+
             var item = stack.items.pop()
 
             // stop pushing to hand when breaking item encountered
-            if (item.breaking)
-              break
+            // if (item.breaking)
+            //   break
 
             // push top of stack to hand
             this.hand.items.push(item)
@@ -510,8 +515,7 @@
           // win condition: robots cleared
           console.log("checking win condition")
           if (!(this.robot_count<[0,0,0,0,0,0] || [0,0,0,0,0,0]<this.robot_count)) { // array equality
-            var record = player_name + " " + player_level + "-" + player_stage  + "-" + 
-              ((game_mode == 1) ? "E" : "H") + " (" + this.player.timer.clock_text + ") W\n"
+            var record = buildRecordString(this,"W")
             saveRecord(record)
             window.alert(record)
             if (player_level == 1) {
@@ -549,8 +553,7 @@
               if (this.block_count[c] < 3 && this.flask_count[c] <= 0) {
 
                 console.log("lose!")
-                var record = player_name + " " + player_level + "-" + player_stage  + "-" + 
-                  ((game_mode == 1) ? "E" : "H") + " (" + this.player.timer.clock_text + ") L\n"
+                var record = buildRecordString(this,"L")
                 saveRecord(record)
                 window.alert(record)
                 jaws.start(Game)
@@ -563,8 +566,7 @@
           // window.alert ("checking for lose condition with potential_white_potions = " + potential_white_potions)
           if (potential_white_potions < this.flask_count[EMPTY]) {
                 console.log("lose! Not enough white blocks to clear robots.")
-                var record = player_name + " " + player_level + "-" + player_stage  + "-" + 
-                  ((game_mode == 1) ? "E" : "H") + " (" + this.player.timer.clock_text + ") L\n"
+                var record = buildRecordString("L")
                 saveRecord(record)
                 window.alert(record)
                 jaws.start(Game)
@@ -1325,6 +1327,17 @@
        }
     }
 
+    // construct record string
+    function buildRecordString (board, winloss) {
+
+      var record = player_name + " " + player_level + "-" + player_stage + "-" + ((game_mode == 1) ? "E" : "H") + " (" + board.player.timer.clock_text + ") " + winloss + "\n"
+
+      console.log(record)
+
+      return record
+
+    }
+
     function saveRecord (record) {
       console.log("savingRecord()")
       jQuery.ajax({
@@ -1645,7 +1658,7 @@
 
         jaws.on_keydown(["4"], function () {
           if (player_name.length < 10)
-            player_name += (shift) ? "$" : "4"
+            player_name += (shift) ? "$$" : "4"
           messageConsole()
         })
 
